Add Avatar and Header, Change base <a> styles, add font

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: 'Inconsolata', ui-monospace, SFMono-Regular, Menlo, Monaco,
+      Consolas, 'Liberation Mono', 'Courier New', monospace;
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply font-bold hover:border-b-2 focus-visible:border-b-2 border-b-notblue outline-none;
 }
 
 * {
