--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,14 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+}
+
+::selection {
+  @apply bg-not-green bg-opacity-30;
+}
+
 html,
 body {
   padding: 0;
@@ -23,10 +31,12 @@ a {
   @apply font-bold decoration-2 decoration-not-pink underline-offset-4 hover:underline focus-visible:underline outline-none text-not-pink;
 }
 
-* {
-  box-sizing: border-box;
+p {
+  @apply leading-6;
 }
 
-::selection {
-  @apply bg-not-green bg-opacity-30;
+p:after {
+  content: '';
+  display: inline-block;
+  width: 0px;
 }
