--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,14 @@
 
 @layer base {
   html {
-    font-family: 'Inconsolata', ui-monospace, SFMono-Regular, Menlo, Monaco,
-      Consolas, 'Liberation Mono', 'Courier New', monospace;
+    @apply font-custom;
+  }
+
+  code,
+  kbd,
+  samp,
+  pre {
+    @apply font-custom;
   }
 }
 
@@ -14,13 +20,14 @@
 }
 
 ::selection {
-  @apply bg-not-green bg-opacity-30;
+  @apply bg-not-green text-black;
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
+  font-size: 18px;
 }
 
 body {
